[package]
name = "llamac"
version = "0.0.1"
authors = ["Nafi Amaan Hossain"]
edition = "2018"

description = "A simple 'TOY' language."
license = "MIT"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-codegen = "0.86.1"
cranelift = "0.86.1"
cranelift-module = "0.86.1"
cranelift-object = "0.86.1"
logos = "0.12.1"
cstree = "0.11.1"
